--- a/Trabalho em Latex/PIBIC.tex
+++ b/Trabalho em Latex/PIBIC.tex
@@ -204,7 +204,7 @@
 
 % resumo em português
 \begin{resumoumacoluna}
-Nesse trabalho utilizaremos o método de Thurstone para determinação de preferências agregadas sobre candidatos em eleições a partir de manifestações individuais sobre pares de alternativas. Geralmente as pesquisas de intenção de voto publicam as preferências coletivas, em termos de frequências relativas, sobre pares de candidatos em determinados momentos: pesquisas pré-eleitorais. O método de escalagem psicométrica de Thurstone é uma das diversas técnicas de escalagem psicométrica unidimensional, que têm como objetivo determinar probabilisticamente as preferências agregadas dos eleitores sobre a lista de candidatos. As pesquisas pré-eleitorais terminam onde justamente começam as técnicas de escalagem psicométrica. Como instância de aplicação do método, tomaremos uma lista plausível de candidatos para a eleição presidencial brasileira de 2018, e captaremos uma amostra representativa da Faculdade de Administração, Contabilidade e Economia da Universidade de Brasília
+Nesse trabalho utilizaremos o método de escalagem psicométrica de Thurstone para determinação de preferências agregadas sobre candidatos em eleições a partir de manifestações individuais sobre pares de alternativas. Como instância de aplicação do método, tomaremos uma lista plausível de candidatos para a eleição presidencial brasileira de 2018, assim como uma amostra representativa da Faculdade de Administração, Contabilidade e Economia da Universidade de Brasília, analizados estes dados com o auxílio da linguagem de programação R e publicados na plataforma GitHub. 
 
 
  \vspace{\onelineskip}
@@ -221,12 +221,12 @@ Nesse trabalho utilizaremos o método de Thurstone para determinação de prefer
 % ----------------------------------------------------------
 % Introdução
 % ----------------------------------------------------------
-\section*{Introdução}
+\section{Introdução}
 \addcontentsline{toc}{section}{Introdução}
 
 jfvnjdfnvjdf hj dfjv kjdf vjdfjv kdfj vkjdf vjk df vkdfvjk dfv  dvj df v dfv kdjf vjkdf vkjdf kv kdf v dfjvfdj df vkjdf vk dfk vkjdf vkdf vk dfk fd vkfv dfv jk
 
-\section{}
+\section{O método de Escalagem Psicométrica}
 
 \end{document}
 
@@ -240,6 +240,16 @@ jfvnjdfnvjdf hj dfjv kjdf vjdfjv kdfj vkjdf vjk df vkdfvjk dfv  dvj df v dfv kdj
 % Conclusão
 % ---
 \section*{Considerações finais}
+\addcontentsline{toc}{section}{Considerações finais}
+
+\lipsum[1]
+
+\begin{citacao}
+\lipsum[2]
+\end{citacao}
+
+\lipsum[3]
+
 
 % ]  				% FIM DE ARTIGO EM DUAS COLUNAS
 % ---
@@ -247,7 +257,8 @@ jfvnjdfnvjdf hj dfjv kjdf vjdfjv kdfj vkjdf vjk df vkdfvjk dfv  dvj df v dfv kdj
 % ----------------------------------------------------------
 % Referências bibliográficas
 % ----------------------------------------------------------
-\bibliography{abntex2-modelo-references}
+\bibliography{bib/referencias}
+
 
 % ----------------------------------------------------------
 % Glossário
@@ -268,8 +279,7 @@ jfvnjdfnvjdf hj dfjv kjdf vjdfjv kdfj vkjdf vjk df vkdfvjk dfv  dvj df v dfv kdj
 \begin{apendicesenv}
 
 % ----------------------------------------------------------
-\chapter{Nullam elementum urna vel imperdiet sodales elit ipsum pharetra ligula
-ac pretium ante justo a nulla curabitur tristique arcu eu metus}
+\chapter{R Programming Scripts}
 % ----------------------------------------------------------
 \lipsum[55-57]
 
@@ -287,8 +297,7 @@ ac pretium ante justo a nulla curabitur tristique arcu eu metus}
 \begin{anexosenv}
 
 % ---
-\chapter{Cras non urna sed feugiat cum sociis natoque penatibus et magnis dis
-parturient montes nascetur ridiculus mus}
+\chapter{Questionário}
 % ---
 
 \lipsum[31]
