--- a/Trabalho em Latex/bib/referencias.bib
+++ b/Trabalho em Latex/bib/referencias.bib
@@ -1,3 +1,11 @@
+%% This BibTeX bibliography file was created using KBibTeX.
+
+
+%% Created for Lucas Loureiro Lino da Costa at 2018-07-01
+
+
+%% Saved with string encoding Unicode (UTF-8) 
+
 @book{arrow2012social,
 	author = {Arrow, Kenneth J},
 	publisher = {Yale university press},
@@ -41,5 +49,22 @@
 	title = {A law of comparative judgement},
 	volume = {34},
 	year = {1927}
+}
+
+@manual{EmptyId,
+	address = {Vienna, Austria},
+	author = {{R Core Team}},
+	organization = {R Foundation for Statistical Computing},
+	title = {R: A Language and Environment for Statistical Computing},
+	url = {https://www.R-project.org/},
+	year = {2018}
+}
+
+@misc{Lucas2018,
+	author = {Costa, Lucas Loureiro Lino da},
+	howpublished = {\url{https://github.com/loureirolino/Agregacao-de-Preferencias-Eleitorais-via-Escalagem-Psicometrica-de-Thurstone}},
+	journal = {GitHub Repository},
+	publisher = {GitHub},
+	title = {Agrega{\c c}{\~a}o de Prefer{\^e}ncias Eleitorais via Escalagem Psicom{\'e}trica de Thurstone}
 }
 
